accounts.py and authenticator started

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,8 +26,9 @@ services:
             - 15432:5432
     fastapi:
         environment:
-            DATABASE_URL: postgresql://gamergrove:password@postgres/gamergrove_db
+            DATABASE_URL: ${DATABASE_URL_FROM_ENV_FILE}
             CORS_HOST: http://localhost:5173
+            SIGNING_KEY: ${SIGNING_KEY_FROM_ENV_FILE}
         build:
             context: api
             dockerfile: Dockerfile.dev
@@ -37,6 +38,19 @@ services:
             - ./api:/app
 
     ghi:
+        # image: node:lts-bullseye
+        # command: /bin/bash run.sh
+        # working_dir: /app
+        # volumes:
+        #     - ./ghi:/app
+        # ports:
+        #     - "3000:3000"
+        # environment:
+        #     HOST_OS: ${OS}
+        #     NODE_ENV: development
+        #     HOST: "0.0.0.0"
+        #     PUBLIC_URL: http://localhost:3000
+        #     REACT_APP_API_HOST: ${REACT_APP_API_HOST}
         image: node:lts-bullseye
         command: /bin/bash run.sh
         working_dir: /app
