--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
             DATABASE_URL: ${DATABASE_URL_FROM_ENV_FILE}
             CORS_HOST: http://localhost:5173
             SIGNING_KEY: ${SIGNING_KEY_FROM_ENV_FILE}
+            API_KEY: ${RAWG_API_KEY}
         build:
             context: api
             dockerfile: Dockerfile.dev
