--- a/ghi/package.json
+++ b/ghi/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@galvanize-inc/jwtdown-for-react": "^0.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.3"
