--- a/ghi/package.json
+++ b/ghi/package.json
@@ -15,7 +15,8 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.3"
+        "react-router-dom": "^6.21.3",
+        "react-spinners": "^0.13.8"
     },
     "devDependencies": {
         "@types/node": "^20.10.7",
