--- a/ghi/package.json
+++ b/ghi/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@galvanize-inc/jwtdown-for-react": "^0.2.2",
         "bootstrap": "^5.3.2",
+        "html-react-parser": "^5.1.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.0",
         "react-dom": "^18.2.0",
