--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "html-react-parser": "^5.1.2",
     "react-alert": "^7.0.3",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8"
