--- a/ghi/package.json
+++ b/ghi/package.json
@@ -19,7 +19,9 @@
         "react-bootstrap": "^2.10.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.3",
-        "react-spinners": "^0.13.8"
+        "react-slick": "^0.30.1",
+        "react-spinners": "^0.13.8",
+        "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
         "@types/node": "^20.10.7",
