yml file updated

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,10 @@ tests:
         # Run unit tests
 api-unit-tests-job:
     variables:
-        SIGNING_KEY: 'does-not-matter'
+        DATABASE_URL: '${DATABASE_URL_FROM_ENV_FILE}'
+        CORS_HOST: '${CORS_HOST}'
+        SIGNING_KEY: '${SIGNING_KEY_FROM_ENV_FILE}'
+        API_KEY: '${RAWG_API_KEY}'
 
 
 # # Build API Image:
