--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,12 +18,21 @@ tests:
         - pip install -r requirements.txt
         - python -m pytest
         # Run unit tests
-    api-unit-tests-job:
-        variables:
-            DATABASE_URL: '${DATABASE_URL_FROM_ENV_FILE}'
-            CORS_HOST: '${CORS_HOST}'
-            SIGNING_KEY: '${SIGNING_KEY_FROM_ENV_FILE}'
-            API_KEY: '${RAWG_API_KEY}'
+api-unit-tests-job:
+    image: python:3-bullseye
+    stage: test
+    needs:
+        - lint-test-job
+    variables:
+        DATABASE_URL: '${DATABASE_URL_FROM_ENV_FILE}'
+        CORS_HOST: '${CORS_HOST}'
+        SIGNING_KEY: '${SIGNING_KEY_FROM_ENV_FILE}'
+        API_KEY: '${RAWG_API_KEY}'
+    script:
+        - cd api
+        - pip install -r requirements.txt
+        - python -m pytest
+
 
 
 # # Build API Image:
