--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,15 +14,12 @@ tests:
     script:
         - pip install flake8
         - flake8 api
-        - cd api
-        - pip install -r requirements.txt
-        - python -m pytest
         # Run unit tests
 api-unit-tests-job:
     image: python:3-bullseye
     stage: test
     needs:
-        - lint-test-job
+        - tests
     variables:
         DATABASE_URL: '${DATABASE_URL_FROM_ENV_FILE}'
         CORS_HOST: '${CORS_HOST}'
