Adding COPY authenticator.py to Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /app
 # Modify these instructions to do that
 COPY requirements.txt requirements.txt
 COPY main.py main.py
+COPY authenticator.py authenticator.py
 COPY queries queries
 COPY routers routers
 
