--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,6 +13,7 @@ COPY main.py main.py
 COPY authenticator.py authenticator.py
 COPY queries queries
 COPY routers routers
+COPY seederfile.py seederfile.py
 
 # Copy all of the subdirectories in your service's directory
 # Modify these instructions to do that
