Comment out documentation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ build-front-end-job:
     - npm run lint
     - npm run build -- --base=/gamergrove/
     # The following line creates a _redirects file to redirect all URLs to index.html
-    Documentation: https://docs.gitlab.com/ee/gamergrove/gamer-grove/pages/redirects.html#rewrite-all-requests-to-a-root-indexhtml
+    # Documentation: https://docs.gitlab.com/ee/gamergrove/gamer-grove/pages/redirects.html#rewrite-all-requests-to-a-root-indexhtml
     - echo "/* /index.html 200" > dist/_redirects
   artifacts:
     paths:
