--- a/ghi/jsconfig.json
+++ b/ghi/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES6",
     "module": "ESNext",
     "jsx": "react-jsx",
     "moduleResolution": "node",
