--- a/ghi/package.json
+++ b/ghi/package.json
@@ -29,6 +29,7 @@
         "@types/react": "^18.2.47",
         "@types/react-dom": "^18.2.7",
         "@vitejs/plugin-react-swc": "^3.3.2",
+        "esbuild": "^0.20.0",
         "eslint": "^8.45.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
