--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ build-front-end-job:
     # You need to substitute in your real values for
     # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
     # Don't forget to also replace PROJECT NAME in the npm run build line as well
-    PUBLIC_URL: https://gamergrove.gitlab.io/gamer-grove/
+    PUBLIC_URL: https://gamergrove.gitlab.io/gamergrove/
     VITE_API_HOST: https://oct-2023-7-et-api.mod3projects.com
   script:
     - cd ghi
@@ -72,7 +72,7 @@ build-front-end-job:
     - npm run lint
     - npm run build -- --base=/gamergrove/
     # The following line creates a _redirects file to redirect all URLs to index.html
-    # Documentation: https://docs.gitlab.com/ee/gamergrove/gamer-grove/pages/redirects.html#rewrite-all-requests-to-a-root-indexhtml
+    # Documentation: https://docs.gitlab.com/ee/gamergrove/gamergrove/pages/redirects.html#rewrite-all-requests-to-a-root-indexhtml
     - echo "/* /index.html 200" > dist/_redirects
   artifacts:
     paths:
