Changed npm run build line

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ build-front-end-job:
     - cd ghi
     - npm install
     - npm run lint
-    - npm run build -- --base=/gamergrove/
+    - npm run build
     # The following line creates a _redirects file to redirect all URLs to index.html
     # Documentation: https://docs.gitlab.com/ee/gamergrove/gamergrove/pages/redirects.html#rewrite-all-requests-to-a-root-indexhtml
     - echo "/* /index.html 200" > dist/_redirects
